RESOLVED FIXED 235486
[GTK][a11y] Test accessibility/url-test.html fails with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=235486
Summary [GTK][a11y] Test accessibility/url-test.html fails with ATSPI
Carlos Garcia Campos
Reported 2022-01-23 00:21:35 PST
PASS element.url.indexOf('url-test1.html') != -1 is true -PASS element.url.indexOf('url-test2.html') != -1 is true +FAIL element.url.indexOf('url-test2.html') != -1 should be true. Was false. PASS element.url.indexOf('url-test3.png') != -1 is true PASS successfullyParsed is true url-test2.html is actually the fragment id, and we are getting just the path when removing the base path.
Attachments
Patch (1.96 KB, patch)
2022-01-23 00:23 PST, Carlos Garcia Campos
darin: review+
ews-feeder: commit-queue-
Carlos Garcia Campos
Comment 1 2022-01-23 00:23:28 PST
Darin Adler
Comment 2 2022-01-23 10:58:30 PST
Comment on attachment 449746 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449746&action=review > Tools/WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:1387 > + auto index = stringURL.find("LayoutTests"); Not great that we have to hardcode the directory name here. I don’t think we do that other places in the test runners.
Carlos Garcia Campos
Comment 3 2022-01-24 08:18:49 PST
Note You need to log in before you can comment on or make changes to this bug.