[GTK][a11y] Test accessibility/url-test.html fails with ATSPI https://bugs.webkit.org/show_bug.cgi?id=235486

Reviewed by Darin Adler.

Ensure we don't remove the fragment id of URL when removing the base path.

* WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::AccessibilityUIElement::url):


Canonical link: https://commits.webkit.org/246333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288444 268f45cc-cd09-0410-ab3c-d52691b4dbfc